# cbt-web-app

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  dockerfile  pyproject.toml
backend/app/: alembic.ini  config.py  main.py  router.py  settings.py
backend/app/activity/dependencies/: activity.py
backend/app/activity/models/: activity.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2024_10_15_1555-a0f0a6b81bef_create_table_avtivity.py  2024_10_16_1200-338a01657b90_create_user_table.py  2024_10_16_1207-6ce7a3a446a2_add_relation_user_only_many_activity.py  2024_10_16_1431-6aaf173381b6_add_profile_table_relations_bw_user_.py  2024_10_22_1245-3faa676f4c54_add_column_passhash_to_user_table.py
backend/app/api/: activity.py  auth.py  main.py  router.py  user.py
backend/app/api/dependencies/: activity.py
backend/app/api/routes/: activity.py  root.py  time_tracker.py  user.py
backend/app/application/dto/: __init__.py  jwt_payload.py  user.py
backend/app/application/interfaces/: auth.py
backend/app/application/use_cases/: user_get.py  user_login.py  user_register.py
backend/app/apps/activity/: routes.py
backend/app/apps/auth/: fake_data.py  routes.py  validation.py
backend/app/auth/repository/: user.py
backend/app/auth/service/: jwt.py  user.py
backend/app/core/: security.py  settings.py
backend/app/core/db/: __init__.py  database.py
backend/app/data/: __init__.py  base.py  database.py  main.py  models.py  schemas.py  time_tracker.py  user.py
backend/app/data/crud/: activity.py
backend/app/db/mixins/: user_relation.py
backend/app/domain/entities/: activity.py  user.py
backend/app/domain/repositories/: user.py
backend/app/fake/: user.py
backend/app/infrastucture/: __init__.py  alembic.ini
backend/app/infrastucture/db/: __init__.py  base.py  database.py
backend/app/infrastucture/migrations/: env.py
backend/app/infrastucture/models/: __init__.py  user.py
backend/app/infrastucture/repositories_impl/: __init__.py  user_repository_impl.py
backend/app/infrastucture/security/: __init__.py  encoding.py  jwt_payload.py  jwt_payload_factory_impl.py  jwt_payload_factory_interface.py  (+3 more)
backend/app/models/: activity.py  mood.py  mood_tracker.py  thought.py  thought_diary.py  time_tracekr.py  time_tracker.py  user.py
backend/app/schemas/: activity.py  mood.py  thought.py  user.py
backend/app/service/: activity.py  auth.py  time_tracker.py  user.py
backend/tests/full/: test_user.py
(+58 files in other folders)
