[tool.poetry]
name = "app"
version = "0.1.0"
description = "CBT web-application"
authors = ["Vadim Kuleshov <merulis@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
python-multipart = "^0.0.12"
pydantic = {extras = ["email"], version = "^2.9.2"}
psycopg2-binary = "^2.9.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
pydantic-settings = "^2.5.2"
alembic = "^1.13.3"
passlib = "^1.7.4"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpie = "^3.2.3"
hypothesis = "^6.115.0"
schemathesis = "^3.37.0"
pre-commit = "^4.0.1"
ruff = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
